# ProteiTestTask

./: CMakeLists.txt  README.md  Server.cpp  Server.h  client.cpp  main.cpp  server.cpp
